fix,CreateShare url can be refresh,display proper Sign err mes on mobile

--- a/app/Sign/components/SigninForm/styles.module.css
+++ b/app/Sign/components/SigninForm/styles.module.css
@@ -69,6 +69,7 @@
 
 @media screen and (max-width:860px) {
   .boxInputMes {
+    max-width: unset;
     position: unset;
     right: unset;
     top: unset;
